--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,11 +72,25 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //权限
-//    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
+    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
 
     implementation 'com.android.support:multidex:1.0.3'
 
 //    implementation 'com.shuyu:GSYVideoPlayer:7.1.3'
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-java:v8.3.4-release-jitpack'
+
+    //是否需要ExoPlayer模式
+    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer-exo2:v8.3.4-release-jitpack'
+
+    //是否需要AliPlayer模式
+    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer-aliplay:v8.3.4-release-jitpack'
+
+    //根据你的需求ijk模式的so
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-arm64:v8.3.4-release-jitpack'
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv7a:v8.3.4-release-jitpack'
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv5:v8.3.4-release-jitpack'
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-x86:v8.3.4-release-jitpack'
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-x64:v8.3.4-release-jitpack'
 
     //Android Jetpack 组件
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
