--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     //权限
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
 
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+
     implementation 'com.android.support:multidex:1.0.3'
 
 //    implementation 'com.shuyu:GSYVideoPlayer:7.1.3'
